main.tf
resource "aws_vpc" "demo-vpc" {
  cidr_block           = "10.123.0.0/16"
  enable_dns_hostnames = true

  tags = {
    Name = "dev"
  }
}

resource "aws_subnet" "demo_public_subnet" {
  vpc_id                  = aws_vpc.demo-vpc.id
  cidr_block              = "10.123.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "us-east-1a"

  tags = {
    Name = "dev-public"
  }
}

resource "aws_internet_gateway" "demo_internet_gateway" {
  vpc_id = aws_vpc.demo-vpc.id

  tags = {
    Name = "dev-igw"
  }
}



resource "aws_route_table" "demo_public_rt" {
  vpc_id = aws_vpc.demo-vpc.id

  tags = {
    Name = "dev_public_rt"
  }
}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.demo_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.demo_internet_gateway.id

}

resource "aws_route_table_association" "demo_public_assoc" {
  subnet_id      = aws_subnet.demo_public_subnet.id
  route_table_id = aws_route_table.demo_public_rt.id
}

resource "aws_security_group" "demo_sg" {
  name        = "dev_sg"
  description = "dev security group"
  vpc_id      = aws_vpc.demo-vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

}

resource "aws_key_pair" "demo_auth" {
    key_name = "id_rsa"
    public_key = file("~/.ssh/id_rsa.pub")
}

resource "aws_instance" "dev_node" {
  ami           = data.aws_ami.demo_ami.id
  instance_type = "t3.micro"
  key_name = aws_key_pair.demo_auth.id
  vpc_security_group_ids = [aws_security_group.demo_sg.id]
  subnet_id = aws_subnet.demo_public_subnet.id
  user_data = file("userdata.tpl")

  root_block_device {
  volume_size = 10
}

  tags = {
    Name = "dev-node"
  }
  
  provisioner "local-exec" {
    command = templatefile("windows-ssh-config.tpl",{
       hostname = self.public_ip,
       user = "ubuntu",
       identityfile = "~/.ssh/id_rsa"
    })

    interpreter = var.host_os == "windows" ? ["powershell", "-command"] : ["bash", "-c"]
     
  }
}
